[gd_scene load_steps=3 format=3 uid="uid://yj50gy0yj403"]

[ext_resource type="Script" uid="uid://jwovdb72omc" path="res://shootemup/levels/spawners/single_spawner_behavior.gd" id="1_5fbvl"]
[ext_resource type="PackedScene" uid="uid://druq6y6ah7jbr" path="res://shootemup/util/boundaries_util.tscn" id="2_4rnan"]

[node name="SingleSpawnerBehavior" type="Node2D" groups=["Behavior"]]
script = ExtResource("1_5fbvl")

[node name="SpawnTimer" type="Timer" parent="."]

[node name="BoundariesUtil" parent="." instance=ExtResource("2_4rnan")]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
